minor text improvements

--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@ inside of the Max Planck Society and affiliated research institutes, or at partn
 	<div id="page5c" style="display:none">
 		<br>
 		<!-- <h2 style="text-align: center;">Hmm...but what patterns?</h2> -->
-		<p style="font-size:180%; text-align: center;"> Th other company showed an...</p>
+		<p style="font-size:180%; text-align: center;"> The other company showed an...</p>
 		<h3 style="text-align: center;"> Alternating Pattern </h3>
 		<p style="font-size:125%; text-align: center;">
 			He saw that every other option was highly rewarding so either keys (S, F, K; top row) or (D, J, L; bottom row) could be more rewarding. <br>
@@ -292,10 +292,10 @@ inside of the Max Planck Society and affiliated research institutes, or at partn
 			They now want to challenge their visitors. <br>
 			<!-- as a test to see if people actually are exploiting the pattern individually -->
 			So, once you finish playing against the two slot machines, they will connect the machines together and ask you to play against the connected slot machine. <br>
-			The machines are connected such that it has blocks of three contiguous keys (either <b>SDF</b> or <b>JKL</b>) from previously played slot machines. <br>
+			The machines are connected such that it has blocks of three keys (either <b>SDF</b> or <b>JKL</b>) from previously played slot machines. <br>
 			Three options for such a connected machine will be <strong style="color: #50BF00;"> green </strong> and the remaining in <strong style="color: #0090DF;"> blue </strong> indicating the slot machine they are from. <br>
-			They can also come in one of the two orders as shown below. <br>
-			<img src="figs/ChangePoint.png" width="600"><br>
+			They can be connected in one of the two orders as shown below. <br>
+			<img id="changepoint_condition" src="figs/ChangePoint_BG.png" width="600"><br>
 			The coins for an option is expected to be roughly equal to that of the same colored option previously seen in the casino. <br>
 			Essentially, you will be playing <strong> three  slot machines </strong> (green, blue, and connected green-blue) in each casino today. <br>
 			Before you start, here is a quick tutorial to get you upto speed! <br>
@@ -344,7 +344,7 @@ inside of the Max Planck Society and affiliated research institutes, or at partn
 		<img src="figs/ChangeGK.png" width="500"> <br>
 		After playing your quota of trials on the second machine, the owners would connect the two slot machines together. <br>
 		The connected machine has blocks of three keys each from the first and the second slot machine as indicated by their color (shown below). <br>
-		If you pick option <b>D</b> in <strong style="color: #0090DF;"> blue </strong> , you get roughly the same number of coins as option <b>D</b> on the  <strong style="color: #0090DF;"> blue </strong>  slot machine. <br> 
+		If you pick option <b>D</b> in <strong style="color: #0090DF;"> blue</strong>, you get roughly the same number of coins as option <b>D</b> on the  <strong style="color: #0090DF;"> blue </strong>  slot machine. <br> 
 		Similarly, choosing option <b>K</b> in  <strong style="color: #50BF00;"> green </strong>  yields roughly the same number of coins as option on <b>K</b> the  <strong style="color: #50BF00;"> green </strong>  slot machine. <br>
 		<img src="figs/ChangeBGKD.png" width="800"> <br>
 		So, if you can figure out the patterns in the two slot machines in a casino, you would know the pattern for the connected slot machine. <br>
@@ -377,10 +377,10 @@ inside of the Max Planck Society and affiliated research institutes, or at partn
 			The casino owners recently noticed that a lot of people were doing well on the new slot machines. <br>
 			They now want to challenge their visitors. <br>
 			So, they connected the machines together and asked people to play only against the connected slot machine instead. <br>
-			The machines are connected such that it has blocks of three contiguous keys (either <b>SDF</b> or <b>JKL</b>) from the two slot machines in the casino. <br>
+			The machines are connected such that it has blocks of three keys (either <b>SDF</b> or <b>JKL</b>) from the two slot machines in the casino. <br>
 			Three options for such a connected machine will be <strong style="color: #50BF00;"> green </strong> and the remaining in <strong style="color: #0090DF;"> blue </strong> indicating the slot machine they are from. <br>
-			They can also come in one of the two orders as shown below. <br>
-			<img src="figs/ChangePoint.png" width="600"><br>
+			They can be connected in one of the two orders as shown below. <br>
+			<img id="changepoint_condition" src="figs/ChangePoint.png" width="600"><br>
 			The coins for an option of a specific color is equal to that you could have earned from the same colored slot machine in the casino. <br>
 			Essentially, you will be playing only <strong> one slot machine </strong> (connected green-blue) in each casino today. <br>
 			Hope you are up for the challenge! <br>
