remove switch condition feature

--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@ inside of the Max Planck Society and affiliated research institutes, or at partn
 			The machines are connected such that it has blocks of three keys (either <b>SDF</b> or <b>JKL</b>) from previously played slot machines. <br>
 			Three options for such a connected machine will be <strong style="color: #50BF00;"> green </strong> and the remaining in <strong style="color: #0090DF;"> blue </strong> indicating the slot machine they are from. <br>
 			They can be connected in one of the two orders as shown below. <br>
-			<img id="changepoint_condition" src="figs/ChangePoint_BG.png" width="600"><br>
+			<img id="changepoint_condition" src="figs/ChangePoint.png" width="600"><br>
 			The coins for an option is expected to be roughly equal to that of the same colored option previously seen in the casino. <br>
 			Essentially, you will be playing <strong> three  slot machines </strong> (green, blue, and connected green-blue) in each casino today. <br>
 			Before you start, here is a quick tutorial to get you upto speed! <br>
